# linkrs

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  cbindgen.toml  config.toml
crates/graphdb-api/: Cargo.toml  build.rs
crates/graphdb-api/src/: lib.rs
crates/graphdb-api/src/api/: http_server.rs  mod.rs  shutdown.rs  startup.rs
crates/graphdb-api/tests/: schema_versioning_integration.rs
crates/graphdb-config/: Cargo.toml
crates/graphdb-config/src/: lib.rs
crates/graphdb-config/src/config/: logging.rs  mod.rs
crates/graphdb-config/tests/: config_loading.rs
crates/graphdb-core/: Cargo.toml
crates/graphdb-core/src/core/: mod.rs  npath.rs  permission.rs  session_stats.rs  type_system.rs  user_storage.rs  vertex_edge_path.rs
crates/graphdb-core/src/utils/: arena.rs  bloom_filter.rs  id_gen.rs  mod.rs  null_bitmap.rs
crates/graphdb-core/tests/: geography_core.rs
crates/graphdb-core/tests/common/: assertions.rs  data_fixtures.rs  mod.rs
crates/graphdb-core/tests/geography_tests/: basic.rs  common.rs  format_conversion.rs  geometry_types.rs  mod.rs  spatial_functions.rs
crates/graphdb-migration/: Cargo.toml
crates/graphdb-migration/src/: converter.rs  executor.rs  generator.rs  lib.rs  plan.rs
crates/graphdb-query/: Cargo.toml
crates/graphdb-query/data/fulltext/: fulltext_metadata.json
crates/graphdb-query/src/: lib.rs
crates/graphdb-query/src/query/: data_set.rs  mod.rs  query_manager.rs  query_pipeline_manager.rs
crates/graphdb-query/tests/: integration_core.rs  integration_cypher_create.rs  integration_data_flow.rs  integration_dcl.rs  integration_ddl.rs  integration_dml.rs  integration_dql.rs  integration_functions.rs  integration_graph_traversal.rs  integration_management.rs  integration_management_extended.rs  integration_optimizer.rs  integration_pipeline.rs  integration_query.rs  integration_schema_compatibility.rs  metadata_resolution_test.rs
crates/graphdb-query/tests/common/: assertions.rs  data_fixtures.rs  mod.rs  query_helpers.rs  storage_helpers.rs  test_scenario.rs
crates/graphdb-query/tests/dcl/: cascade_operations.rs  concurrent_operations.rs  cross_operation_consistency.rs  edge_cases.rs  mod.rs  permission.rs  role.rs  security_tests.rs  transaction_consistency.rs  user_management.rs
crates/graphdb-query/tests/ddl/: constraints.rs  edge_alter.rs  edge_basic.rs  mod.rs  schema_evolution.rs  tag_alter.rs  tag_basic.rs
crates/graphdb-query/tests/dml/: batch_operations.rs  common.rs  constraints.rs  delete.rs  insert_edge.rs  insert_vertex.rs  mod.rs  update.rs  upsert.rs
crates/graphdb-query/tests/dql/: aggregation.rs  common.rs  fetch.rs  find_path.rs  go.rs  lookup.rs  match_query.rs  mod.rs  optimizer.rs  set_operations.rs  subgraph.rs  subquery.rs
crates/graphdb-query/tests/optimizer/: cost.rs  cost_based.rs  cost_based_strategies.rs  heuristic.rs  heuristic_coverage.rs  mod.rs  result_equivalence.rs
crates/graphdb-query/tests/pipeline/: mod.rs  parsing.rs  planning.rs  validation.rs
crates/graphdb-search/: Cargo.toml
crates/graphdb-search/src/: lib.rs
crates/graphdb-search/src/search/: config.rs  engine.rs  error.rs  isolation_test.rs  jieba_tokenizer.rs  manager.rs  metadata.rs  metrics.rs  mod.rs  result.rs  tantivy_index.rs  warmup.rs
crates/graphdb-search/tests/: fulltext_search.rs
crates/graphdb-search/tests/fulltext_tests/: advanced_queries.rs  basic.rs  common.rs  concurrent.rs  edge_cases.rs  engine_comparison.rs  mod.rs  persistence.rs  sync.rs  transaction.rs
crates/graphdb-storage/: Cargo.toml
crates/graphdb-storage/src/: lib.rs
crates/graphdb-storage/src/storage/: client.rs  compression.rs  metrics.rs  mod.rs  mvcc.rs  naming.rs  persistence.rs  sync.rs  test_mock.rs  types.rs
crates/graphdb-storage/tests/: compaction.rs  concurrent_operations.rs  fault_recovery.rs  full_lifecycle.rs  persistence_recovery.rs  scenario.rs  transaction_isolation.rs  wal_recovery.rs
crates/graphdb-storage/tests/common/: mod.rs
crates/graphdb-sync/: Cargo.toml
crates/graphdb-sync/src/: lib.rs
crates/graphdb-sync/src/sync/: builder.rs  circuit_breaker.rs  dead_letter_queue.rs  manager.rs  mod.rs  retry.rs  types.rs  vector_error.rs  vector_sync.rs
crates/graphdb-transaction/: Cargo.toml
crates/graphdb-transaction/src/: lib.rs
crates/graphdb-transaction/src/transaction/: cleaner.rs  codec.rs  compact_transaction.rs  conflict.rs  conflict_integration_test.rs  context.rs  context_test.rs  error.rs  insert_transaction.rs  issue.md  manager.rs  manager_test.rs  mod.rs  monitor.rs  mvcc.rs  read_transaction.rs  rollback.rs  snapshot_tracker.rs  types.rs  undo_log.rs  update_transaction.rs
crates/vector-client/: Cargo.toml  build.rs
crates/vector-client/proto/: collections.proto  collections_service.proto  json_with_int.proto  points.proto  points_service.proto
crates/vector-client/src/: error.rs  lib.rs
crates/vector-client/tests/: vector_e2e.rs
graphdb-cli/: Cargo.toml
graphdb-cli/docs/: api_improvement_plan.md
graphdb-cli/src/: cli.rs  lib.rs  main.rs
graphdb-cli/src/analysis/: explain.rs  mod.rs  profile.rs  timing.rs
graphdb-cli/src/client/: batch.rs  config.rs  config_types.rs  http_client.rs  mod.rs  request_types.rs  response_types.rs  schema.rs  stats.rs  transaction.rs  types.rs  validation.rs  vector.rs
graphdb-cli/src/command/: meta_commands.rs  mod.rs
graphdb-cli/src/completion/: completer.rs  context.rs  mod.rs
graphdb-cli/src/config/: settings.rs
graphdb-cli/src/input/: buffer.rs  handler.rs  history.rs  mod.rs
graphdb-cli/src/io/: batch.rs  dump.rs  export.rs  import.rs  mod.rs  progress.rs  restore.rs  schema_io.rs  space_export.rs  streaming.rs
graphdb-cli/src/output/: csv.rs  formatter.rs  json.rs  mod.rs  pager.rs  table.rs
graphdb-cli/src/session/: manager.rs  mod.rs  variables.rs
graphdb-cli/src/transaction/: isolation.rs  manager.rs  mod.rs  state.rs
graphdb-cli/src/utils/: error.rs
graphdb-cli/tests/: command_integration_tests.rs  completion_integration_tests.rs
tests/c_api/: CMakeLists.txt  README.md  build_msvc.ps1  tests.c
(+1449 files in other folders)
