[package]
name = "graphdb_cli"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true
rustyline.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
colored.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
dirs.workspace = true
rpassword.workspace = true
csv.workspace = true
chrono.workspace = true
uuid.workspace = true

graphdb-core = { path = "../crates/graphdb-core" }
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "3.0"
