[package]
name = "graphdb-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
rand.workspace = true
dec.workspace = true
bumpalo.workspace = true
crc32fast.workspace = true
zstd.workspace = true
bitvec.workspace = true
postcard.workspace = true
bcrypt.workspace = true
